@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/bsdl.php">BSD-2-Clause</license>
  <notes>
+* [jan] Officially support PHP 7.
 * [mjr] Add ability to delete multiple slices at one time.
 * [mjr] Add confirmation dialog for deleting time slices (Request #10361).
 * [mjr] Implement exclusive timers (Request #12543).
@@ -253,8 +254,8 @@
   <required>
    <php>
     <min>5.3.0</min>
-    <max>6.0.0alpha1</max>
-    <exclude>6.0.0alpha1</exclude>
+    <max>8.0.0alpha1</max>
+    <exclude>8.0.0alpha1</exclude>
    </php>
    <pearinstaller>
     <min>1.7.0</min>
@@ -263,8 +264,8 @@
     <name>horde</name>
     <channel>pear.horde.org</channel>
     <min>5.0.0</min>
-    <max>6.0.0alpha1</max>
-    <exclude>6.0.0alpha1</exclude>
+    <max>8.0.0alpha1</max>
+    <exclude>8.0.0alpha1</exclude>
    </package>
    <package>
     <name>Horde_Auth</name>
@@ -513,6 +514,7 @@
    </stability>
    <license uri="http://www.horde.org/licenses/bsdl.php">BSD-2-Clause</license>
    <notes>
+* [jan] Officially support PHP 7.
 * [mjr] Add ability to delete multiple slices at one time.
 * [mjr] Add confirmation dialog for deleting time slices (Request #10361).
 * [mjr] Implement exclusive timers (Request #12543).
