@@ -2,6 +2,7 @@
 v2.0-git
 --------
 
+[jan] Officially support PHP 7.
 [mjr] Add ability to delete multiple slices at one time.
 [mjr] Add confirmation dialog for deleting time slices (Request #10361).
 [mjr] Implement exclusive timers (Request #12543).
